Changelog
=========

2.0.4 (unreleased)
------------------

- Fix dependency-error if ftw.subsite is installed with ftw.theming but without ftw.mobile.
  Only loads mobilenavigation-specific scss if ftw.mobile and ftw.theming are installed.
  [elioschmutz]


2.0.3 (2016-06-10)
------------------

- Implement ftw.mobile button for subsite languages.
  [mathias.leimgruber]

- Remove invalid aria attributes from section and header tag in languageselector.
  [mathias.leimgruber]


2.0.2 (2016-05-30)
------------------

- Add german translations for "contact-info" view.
  [raphael-s]


2.0.1 (2016-04-11)
------------------

- Make languageselector accessible.
  [Kevin Bieri]

- Set global lang attribute according to the subsite language.
  [mathias.leimgruber]

- Use browser layer for all viewlets in this package.
  [mbaechtold]

- Replace miss-used definition list markup by section/header markup in languageselector.
  [mathias.leimgruber]


2.0.0 (2015-12-04)
------------------

- Prevent traversing to a not accessible navigation root in banner and css
  viewlet.
  [mathias.leimgruber]

- Make current language and list of possible languages accessable thru browserview.
  [mathias.leimgruber]

- Add ftw.theming expression to subsite.css.
  [mathias.leimgruber]

- Remove ISubsiteLayer from subsite.logo viewlet. This allows us to register
  a more specific subsite.logo viewlet.
  [mathias.leimgruber]

- Add ftw.theming integration scss (Currently only a Icon).
  [mathias.leimgruber]

- Implement Dexterity based subsite content.
  [mathias.leimgruber]


1.4.2 (2015-02-27)
------------------

- Add ftw.publisher support for teaser portlet.
  [jone]


1.4.1 (2015-02-25)
------------------

- Fix teaserportlet migration 1001, which did not consistently migrate.
  [jone]


1.4.0 (2015-02-24)
------------------

- Fix UnicodeDecodeError while setting a title attr with umlauts.
  [mathias.leimgruber]

- Use getattr for getting the new alt text for teaser images to